--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
+.cabecalho-imagem{width: 20%;}
+* {margin: 0
+   padding: 0;}
 body {background-color: #383D58;}
-
-.cabecalho-imagem{
-
-  width: 20%;  
-
-}
